--- a/layouts/partials/views/publication.html
+++ b/layouts/partials/views/publication.html
@@ -1,31 +1,83 @@
 {{ $item := .item }}
 {{ $has_attachments := partial "functions/has_attachments" $item }}
+{{ $fill_image := .config.fill_image | default true }}
+{{ $resource := partial "functions/get_featured_image.html" $item }}
+{{ $anchor := $item.Params.image.focal_point | default "Center" }}
+{{ $link := $item.Params.external_link | default $item.RelPermalink }}
+{{ $target := "" }}
+{{ if $item.Params.external_link }}
+{{ $link = $item.Params.external_link }}
+{{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+{{ end }}
 
-<div style="margin-bottom: 1.5rem">
-    <!-- <a href="{{ $item.RelPermalink }}" style="font-weight: bold; font-size: large"></a> -->
-    <!-- <span style="font-weight: bold; font-size: large;"> -->
-    <span style="font-weight: bold;">
-        <!-- <i class="far fa-file-alt pub-icon" aria-hidden="true"></i> -->
-        {{ $item.Title }}
-    </span>
-    <br>
+<div class="content-container">
+    <div class="image-container">
+        {{ with $resource }}
+        <img alt="{{ $item.Title | plainify }}"
+            class="transition-all" data-nimg="fill"
+            decoding="async" fetchpriority="high" loading="lazy" src="{{ .RelPermalink }}"
+            style="max-width: 100%; height: auto; object-fit: contain;">
+        {{ else }}
+        <div class="placeholder"></div>
+        {{ end }}
+    </div>
 
-    <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" $item }}
-    </span>
-    <br>
-
-    {{- $item.Params.publication | markdownify -}}
-    <br>
-
-    {{ if $item.Params.note }}
-        <span style="font-weight: bold;">
-            {{ $item.Params.note }}
-            <br>
-        </span>
-    {{ end }}
-
-    {{ if $has_attachments }}
-        {{ partial "github.drumpt.page_links" (dict "page" $item "is_list" 1) }}
-    {{ end }}
+    <div class="text-container">
+        <span style="font-weight: bold;">{{ $item.Title }}</span><br>
+        <span class="article-metadata li-cite-author">{{ partial "page_metadata_authors" $item }}</span><br>
+        {{- $item.Params.publication | markdownify -}} {{ if $item.Params.note }}, <span
+            style="font-weight: bold;">{{ $item.Params.note }}</span> {{ end }}<br>
+        {{ if $has_attachments }} {{ partial "github.drumpt.page_links" (dict "page" $item "is_list" 1) }} {{ end }}
+    </div>
 </div>
+
+<style>
+    .content-container {
+        display: flex;
+        /* Center items vertically */
+        flex-wrap: wrap;
+        margin-top: 1rem;
+    }
+
+    .image-container {
+        flex: 0 0 200px;
+        margin-right: 1rem;
+    }
+
+    .text-container {
+        flex: 1;
+    }
+
+    .placeholder {
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+        /* 16:9 aspect ratio */
+        background-color: rgba(0, 0, 0, 0.0);
+        /* Light transparent background */
+    }
+
+    /* Responsive design for smaller screens */
+    @media (max-width: 768px) {
+        .content-container {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .image-container {
+            flex: 0 0 auto;
+            margin-right: 0;
+            margin-bottom: 1rem;
+            width: 65%;
+        }
+
+        .text-container {
+            width: 100%;
+            text-align: center;
+        }
+
+        .placeholder {
+            display: none;
+        }
+    }
+</style>
