--- a/layouts/partials/views/news.html
+++ b/layouts/partials/views/news.html
@@ -2,6 +2,5 @@
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
 <i class="far fa-newspaper pub-icon" aria-hidden="true"></i>
-[{{ time.Format "Jan 2006" $item.Date }}]
-{{ $item.Title }}
+<span style="font-weight: bold;">[{{ time.Format "Jan 2006" $item.Date }}]</span> {{ $item.Title }}
 <br>
