--- a/layouts/partials/views/news.html
+++ b/layouts/partials/views/news.html
@@ -2,10 +2,13 @@
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
 <!-- <i class="far fa-newspaper pub-icon" aria-hidden="true"></i> -->
-<li>
-    <span style="font-weight: bold;">
-        [{{ time.Format "Jan 2006" $item.Date }}]
-    </span>
-    {{ $item.Title }}
-</li>
+<ul style="margin-bottom: 0px; padding-inline-start: 15px;">
+    <li style="list-style-position: outside;">
+        <span style="font-weight: bold;">
+            [{{ time.Format "Jan 2006" $item.Date }}]
+        </span>
+        {{ $item.Title }}
+    </li>
+</ul>
+
 <!-- <br> -->
