--- a/layouts/partials/blocks/github.drumpt.news.html
+++ b/layouts/partials/blocks/github.drumpt.news.html
@@ -126,7 +126,7 @@
 {{ end }}
 
 <!-- {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "SEE ALL" }} -->
-{{ $archive_text := "See All" }}
+{{ $archive_text := "See all" }}
 <!-- <div class="see-all"> -->
   <a href="{{ $archive_link }}">
     {{ $archive_text | emojify }}<i class="fas fa-angle-right"></i>
