--- a/layouts/partials/views/patent.html
+++ b/layouts/partials/views/patent.html
@@ -24,7 +24,7 @@
         display: flex;
         /* Center items vertically */
         flex-wrap: wrap;
-        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 
     .text-container {
