--- a/layouts/partials/views/publication.html
+++ b/layouts/partials/views/publication.html
@@ -35,7 +35,7 @@
         display: flex;
         /* Center items vertically */
         flex-wrap: wrap;
-        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 
     .image-container {
