--- a/layouts/partials/views/publication.html
+++ b/layouts/partials/views/publication.html
@@ -10,7 +10,7 @@
 {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
 {{ end }}
 
-<div class="content-container">
+<div class="content-container publication-item{{ if .is_last }} last-item{{ end }}">
     <div class="image-container">
         {{ with $resource }}
         <img alt="{{ $item.Title | plainify }}" class="transition-all" data-nimg="fill" decoding="async"
@@ -31,11 +31,16 @@
 </div>
 
 <style>
-    .content-container {
+    .content-container.publication-item {
         display: flex;
-        /* Center items vertically */
+        align-items: flex-start; /* Align at top instead of center for items with images */
         flex-wrap: wrap;
-        margin-bottom: 2rem;
+        margin-bottom: 2rem; /* Add bottom margin to each publication item */
+    }
+
+    /* Remove margin from the last publication item */
+    .content-container:last-of-type {
+        margin-bottom: 0;
     }
 
     .image-container {
