--- a/layouts/partials/views/publication.html
+++ b/layouts/partials/views/publication.html
@@ -33,9 +33,10 @@
 <style>
     .content-container.publication-item {
         display: flex;
-        align-items: flex-start; /* Align at top instead of center for items with images */
+        align-items: flex-start;
         flex-wrap: wrap;
-        margin-bottom: 2rem; /* Add bottom margin to each publication item */
+        margin-bottom: 2rem;
+        /* Add bottom margin to each publication item */
     }
 
     /* Remove margin from the last publication item */
@@ -63,7 +64,7 @@
 
     /* Responsive design for smaller screens */
     @media (max-width: 768px) {
-        .content-container {
+        .content-container.publication-item {
             flex-direction: column;
             align-items: center;
         }
